
# $Id: Makefile.am 2999 2010-10-08 10:23:29Z alor $

include $(top_srcdir)/Makefile.am.common

noinst_HEADERS = bio_injector.h \
                 bio_replacer.h \
                 capture.h \
                 checksum.h \
                 conf.h \
                 debug.h \
                 decode.h \
                 dhcp.h \
                 encryption.h \
                 error.h \
                 file.h \
                 globals.h \
                 hook.h \
                 inet.h \
                 log.h \
					  main.h \
					  match.h \
					  match_fqdn.h \
					  match_request.h \
					  match_url.h \
					  match_users.h \
					  netconf.h \
                 packet.h \
                 parser.h \
                 proto.h \
                 proxy.h \
                 queue.h \
                 radius.h \
					  send.h \
                 signals.h \
                 socket.h \
					  statemachine.h \
                 _stdint.h \
                 _strings.h \
                 threads.h \
					  timer.h \
					  ui.h \
                 version.h \
					  watchdog.h

EXTRA_DIST = missing/*

CLEANFILES = *.log *.out core.* *~ .*swp

# vim:ts=4:expandtab             
